--- a/src/Nancy.Authentication.Forms/project.json
+++ b/src/Nancy.Authentication.Forms/project.json
@@ -1,5 +1,5 @@
-{
-    "version": "2.0.0-barneyrubble",
+﻿{
+    "version": "2.0.0-clienteastwood",
     "description": "A forms authentication provider for Nancy.",
     "authors": [ "Andreas Håkansson, Steven Robbins and contributors" ],
 
