--- a/src/Nancy.Embedded/project.json
+++ b/src/Nancy.Embedded/project.json
@@ -1,5 +1,5 @@
-{
-    "version": "2.0.0-barneyrubble",
+﻿{
+    "version": "2.0.0-clienteastwood",
     "description": "Helpers for serving embedded static content with Nancy.",
     "authors": [ "Andreas Håkansson, Steven Robbins and contributors" ],
 
