--- a/src/Nancy.Owin/project.json
+++ b/src/Nancy.Owin/project.json
@@ -1,5 +1,5 @@
-{
-    "version": "2.0.0-barneyrubble",
+﻿{
+    "version": "2.0.0-clienteastwood",
     "description": "Nancy extensions for OWIN hosting.",
     "authors": [ "Andreas Håkansson, Steven Robbins and contributors" ],
 
